import React from 'react';
import renderer from 'react-test-renderer';
import BookForm from './BookForm';
import { books, authors } from '../../../tools/mockData';

it("sets submit button label 'Saving...' when saving is true", () => {
	const tree = renderer.create(
		<BookForm
			book={books[0]}
			authors={authors}
			onSave={jest.fn()}
			onChange={jest.fn()}
			saving
		/>
	);
	expect(tree).toMatchSnapshot();
});

it("sets submit button label 'Save' when saving is false", () => {
	const tree = renderer.create(
		<BookForm
			book={books[0]}
			authors={authors}
			onSave={jest.fn()}
			onChange={jest.fn()}
			saving={false}
		/>
	);

	expect(tree).toMatchSnapshot();
});
